# imu_odroid

./: CMakeCache.txt  CMakeLists.txt  Makefile  a.out  cmake_install.cmake  concur_data.cpp  concur_data.h  controller.cpp  controller.h  data_structs.h  imu  imu.cpp  imu.cpp~  imu.h  motor.cpp  motor.cpp~  motor.h  motor.h~  motor_test.cpp  motor_test.cpp~  motor_test.h  motor_test.h~  quadrotor_plus.cpp  receiver.h  test  vicon.cpp  vicon.h
include/: Xbee.h  controller.h  data_structs.h  imu.h  logger.h  motor.h  rangesensor_test.cpp  vicon.h
src/: controller.cpp  imu.cpp  logger.cpp  motor.cpp  vicon.cpp
